# sockfish

./: .gitignore  README.md  build.sh  meson.build  run.sh
include/: app.h  board.h  board_event.h  board_render.h  cursor.h  engine.h  event.h  game.h  sockfish.h  special_moves.h  ui.h  ui_helpers.h  ui_render.h  window.h
src/: app.c  board.c  board_event.c  cursor.c  event.c  game.c  main.c  main_sdl.c  main_uci.c  sockfish.c  special_moves.c  ui.c
src/board/: annotations.c  board.c  board_event.c  board_render.c  parse_pgn_move.c  special_moves.c
src/engine/: bitboard_maker.c  engine.c  zobrist.c
src/engine/sockfish/: bitboard.c  bitboard.h  config.c  config.h  evaluation.c  evaluation.h  move_helper.c  move_helper.h  movegen.c  movegen.h  platform.c  platform.h  search.c  search.h  sockfish.c  sockfish.h  thread.c  thread.h  transposition_table.c  transposition_table.h  uci.c  uci.h  zobrist.c
src/sockfish/: engine.c  sockfish.c
src/ui/: cache.c  cursor.c  info.c  ui.c  ui_event.c  ui_helpers.c  ui_render.c
